fix slit cols and item sizing and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@
   color: #fff;
   border-radius: 5px;
   overflow: hidden;
+  padding: 2rem;
 }
 
 .slot-item img {
