--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ a:hover {
   color: #535bf2;
 }
 
+html * {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   display: flex;
